Wed Jul 14 01:20:21  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c: rdoc patch - unified margin.

Wed Jul 14 00:33:48  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c: rdoc patch. merged patch from Johan Holmberg
	  <holmberg@iar.se> [ruby-core:3170]

Tue Jul 13 19:39:12 2004  akira yamada  <akira@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#merge_path):
	  "URI('http://www.example.com/foo/..') + './'" should return
	  "URI('http://www.example.com/')".  [ruby-list:39838]
	  "URI('http://www.example.com/') + './foo/bar/..'" should return
	  "URI('http://www.example.com/foo/')".  [ruby-list:39844]

	* test/uri/test_generic.rb (TestGeneric#test_merge): added tests.

Tue Jul 13 15:48:56 2004  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb (init_mkmf): Do not add $(libdir) to $LIBPATH in
	   extmk mode.

	* lib/mkmf.rb (dir_config): Prepend a new library path instead of
	  appending so it is tried first.

Tue Jul 13 00:50:48 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb: Support call-seq: for Ruby files.

Mon Jul 12 21:20:51 2004  Dave Thomas  <dave@pragprog.com>

	* html_generator.rb: Support hyperlinks of the form {any text}[xxx]
	  as well as stuff[xxx]

Sat Jul 10 09:30:24 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/soap/marshal/test_struct.rb: use qualified build-tin class name
	  (::Struct) to avoid name crash.

Sat Jul 10 04:21:56 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: better operation for SIGINT when processing 
	  callbacks.
	* ext/tk/lib/tk/msgcat.rb: ditto.
	* ext/tk/lib/tk/variable.rb: ditto.
	* ext/tk/lib/tk/timer.rb: ditto.

	* ext/tk/lib/tk/validation.rb (__def_validcmd):  add a module 
	  function of Tk::ValidateConfigure to define validatecommand 
	  methods easier

Fri Jul  9 22:18:59 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c, enum.c, pack.c: rdoc patch from Johan Holmberg
	  <holmberg@iar.se> [ruby-core:3132] [ruby-core:3136]
